# digitalsoma

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
digital_soma/: __init__.py  soma_agent.py  soma_api.py
digital_soma/fhir/: fhir_io.py
digitalsoma/: __init__.py  soma_agent.py  soma_api.py
digitalsoma/fhir/: __init__.py  fhir_io.py
digitalsoma/ontology/: vocab.py
digitalsoma/sensor/: sensor_layer.py
digitalsoma/veddra/: __init__.py  veddra_rules.py  veddra_terms.py
docs/: GETTING_STARTED.md  USER_MANUAL.md  ~$gitalSoma_v3.0.0_Documentation.docx
equitwin/: __init__.py  gait_biomechanics.py
equitwin/examples/: __init__.py  e1_gait_biomechanics.py
equitwin/sensor/: __init__.py  equine_manifest.py
equitwin/solvers/: __init__.py  gait_biomechanics.py
examples/: e1_build_and_describe.py  e2_solver_chain.py  e3_ontology_compliance.py  e4_custom_solver.py  e5_fhir_integration.py  eg1_gait_pipeline.py  exp1_ontology.py  exp2_solver_chain.py  exp3_tes_alarms.py  exp4_veddra.py  porcine_clinical_simulation.html
tests/: test_fhir.py  test_ontology.py  test_soma.py
